--- a/de/webgis-manual/source/mapviewer/news/build_3_0_4002.rst
+++ b/de/webgis-manual/source/mapviewer/news/build_3_0_4002.rst
@@ -6,16 +6,16 @@ Ergebnistabelle
 
 Nach einer Suche oder Abfrage werden die Ergebnisse zuerst in der Ergebnisliste angezeigt.
 Klickt man dort auf ein Ergebnis, werden in einem Dialog die Details dieses Geo-Objektes angezeigt.
-Alternativ dazu können die die Ergebnisse auch in einer Tabelle mit allen Feldern angezeigt werden.
+Alternativ dazu können die Ergebnisse auch in einer Tabelle mit allen Feldern angezeigt werden.
 Zur Tabelle kommt man über den Suchergebnisse Bereich, in dem auch die Ergebnisliste zu finden ist:
 
 .. image:: img/table1.png
 
-Mit der Tabelle werden Werkzeuge angeboten, die sich auf alle Ergebnisse beziehen, beispielsweise *Export als CSV fur MS Excel*.
+Mit der Tabelle werden Werkzeuge angeboten, die sich auf alle Ergebnisse beziehen, beispielsweise *Export als CSV für MS Excel*.
 
 Ab Build 3.0.4002 bietet die Tabelle zusätzlich noch folgende Funktionen:
 
-In der ersten Spalte werden zustätliche *Buttons* (*Checkbox* und *Lupe*) angeboten.
+In der ersten Spalte werden zusätzliche *Buttons* (*Checkbox* und *Lupe*) angeboten.
 
 .. image:: img/table2.png
 
@@ -25,7 +25,7 @@ markierte Zeilen zu löschen:
 
 .. image:: img/table3.png
 
-Nach dem Entfernen der Zeilen, werden ebenfalls die entsprechenden *Marker* in der Karte entfernt.
+Nach dem Entfernen der Zeilen werden ebenfalls die entsprechenden *Marker* in der Karte entfernt.
 
 .. note::
    In der Titelzeile der Tabelle befindet sich ebenfalls eine *Checkbox*. Mit dieser können alle *Checkboxen*
