--- a/de/webgis-manual/source/mapviewer/news/build_3_21_2403.rst
+++ b/de/webgis-manual/source/mapviewer/news/build_3_21_2403.rst
@@ -3,13 +3,17 @@ Build 3.21.2403 (16.06.2021)
 
 Mit diesem Build wurden neue Redlining Werkzeug eingeführt. Mit Redlining können in der Regel einfache Grafiken (Linien, Flächen) und Texten einer Karte hinzugefügt und ausgedruckt werden.
 
-Aus neue Grafiktypen sind:
+Als neue Grafiktypen wurden eingeführt:
 
-* Bemaßungslinie: Zum einfügen von einfachen Maßlinien mit automatischer Beschriftung der einzelnen Segmente
-* Hektometrierungslinie: Linie auf der Punkte mit einem bestimmten Abstand (z.B. 100m) markiert und beschriftet werden
-
-eingefügt worden
+Bemaßungslinie
+--------------
+Zum Einfügen von einfachen Maßlinien mit automatischer Beschriftung der einzelnen Segmente.
 
 .. image:: img/advanced-tools2.png
+
+Hektometrierungslinie
+---------------------
+
+Linie, auf der Punkte mit einem bestimmten Abstand (z.B. 100m) markiert und beschriftet werden
 
 .. image:: img/advanced-tools4.png
